[gd_scene load_steps=14 format=3 uid="uid://d0s2pqd6fjp3d"]

[ext_resource type="Script" path="res://Areas/shop.gd" id="1_bmduc"]
[ext_resource type="Texture2D" uid="uid://rk15wwhw0are" path="res://Sprites/shop/shop_background.png" id="1_brvwh"]
[ext_resource type="Texture2D" uid="uid://bfc1rdl87hwo4" path="res://Sprites/shop/trash_can.png" id="2_fiqpv"]
[ext_resource type="Texture2D" uid="uid://clv5ncte2adoc" path="res://Sprites/shop/bag_box.png" id="3_3vaxw"]
[ext_resource type="Texture2D" uid="uid://dmjb8up53iofi" path="res://Sprites/shop/trash_can_focus.png" id="4_13j8a"]
[ext_resource type="Texture2D" uid="uid://ce3t84ah4l0a1" path="res://Sprites/shop/bag.png" id="4_si4kk"]
[ext_resource type="Texture2D" uid="uid://dnleblbkga3do" path="res://Sprites/shop/energy_cans.png" id="5_32y36"]
[ext_resource type="Texture2D" uid="uid://8ubcw6v1eew" path="res://Sprites/shop/bag_box_focus.png" id="6_vbj6g"]
[ext_resource type="Texture2D" uid="uid://i1dne8f5haxx" path="res://Sprites/shop/words.png" id="6_w2mlt"]
[ext_resource type="Texture2D" uid="uid://cteprl7lnqtdy" path="res://Sprites/shop/bag_focus.png" id="8_qcl06"]
[ext_resource type="Texture2D" uid="uid://bexc38l1umdrm" path="res://Sprites/shop/energy_cans_focus.png" id="9_i6ck1"]
[ext_resource type="Script" path="res://BBCode/bbcode_uppercase.gd" id="12_2wp11"]

[sub_resource type="RichTextEffect" id="RichTextEffect_75nje"]
script = ExtResource("12_2wp11")

[node name="Shop" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bmduc")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_brvwh")

[node name="Trashcan" type="TextureButton" parent="Background"]
layout_mode = 0
offset_left = 128.0
offset_top = 95.0
offset_right = 141.0
offset_bottom = 108.0
scale = Vector2(3, 3)
pivot_offset = Vector2(6, 13)
texture_normal = ExtResource("2_fiqpv")
texture_focused = ExtResource("4_13j8a")
stretch_mode = 3

[node name="BagBox" type="TextureButton" parent="Background"]
layout_mode = 0
offset_left = 131.0
offset_top = 165.0
offset_right = 140.0
offset_bottom = 170.0
scale = Vector2(3, 3)
pivot_offset = Vector2(4, 5)
texture_normal = ExtResource("3_3vaxw")
texture_focused = ExtResource("6_vbj6g")

[node name="Bag" type="TextureRect" parent="Background/BagBox"]
layout_mode = 1
offset_left = -10.0
offset_top = 5.33333
offset_right = 20.0
offset_bottom = 17.3333
pivot_offset = Vector2(11, 0)
texture = ExtResource("4_si4kk")

[node name="BagFocus" type="TextureRect" parent="Background/BagBox/Bag"]
visible = false
layout_mode = 1
offset_left = -1.0
offset_top = -2.0
offset_right = 32.0
offset_bottom = 12.0
pivot_offset = Vector2(11, 0)
texture = ExtResource("8_qcl06")

[node name="EnergyDrink" type="TextureButton" parent="Background"]
layout_mode = 0
offset_left = 129.0
offset_top = 133.0
offset_right = 141.0
offset_bottom = 140.0
scale = Vector2(3, 3)
pivot_offset = Vector2(6, 7)
texture_normal = ExtResource("5_32y36")
texture_focused = ExtResource("9_i6ck1")

[node name="TextureRect" type="TextureRect" parent="Background"]
visible = false
layout_mode = 0
offset_left = 322.0
offset_top = 85.0
offset_right = 354.0
offset_bottom = 97.0
texture = ExtResource("6_w2mlt")

[node name="Dialog" type="RichTextLabel" parent="Background"]
layout_mode = 0
offset_left = 289.0
offset_top = 76.0
offset_right = 408.0
offset_bottom = 108.0
bbcode_enabled = true
text = "[color=black][upper]help Me2"
scroll_active = false
custom_effects = [SubResource("RichTextEffect_75nje")]

[node name="BuyButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 259.0
offset_top = 81.0
offset_right = 287.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 9
text = "BUY"
icon_alignment = 1

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 331.0
offset_top = 222.0
offset_right = 411.0
offset_bottom = 253.0
text = "Exit Shop"

[connection signal="pressed" from="Background/Trashcan" to="." method="_on_trashcan_pressed"]
[connection signal="focus_entered" from="Background/BagBox" to="." method="_on_bag_box_focus_entered"]
[connection signal="focus_exited" from="Background/BagBox" to="." method="_on_bag_box_focus_exited"]
[connection signal="pressed" from="Background/BagBox" to="." method="_on_bag_box_pressed"]
[connection signal="pressed" from="Background/EnergyDrink" to="." method="_on_energy_drink_pressed"]
[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
